syntax = "proto3";

package cuba.iam.oauth;

option go_package = "github.com/cuba-erp/api/iam/oauth";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// OAuth2 授权服务
service OAuthService {
  // ========== OAuth Client 管理 ==========
  
  // 创建 OAuth Client
  rpc CreateClient(CreateClientRequest) returns (CreateClientResponse);
  
  // 获取 OAuth Client
  rpc GetClient(GetClientRequest) returns (GetClientResponse);
  
  // 更新 OAuth Client
  rpc UpdateClient(UpdateClientRequest) returns (UpdateClientResponse);
  
  // 删除 OAuth Client
  rpc DeleteClient(DeleteClientRequest) returns (google.protobuf.Empty);
  
  // 列出 OAuth Clients
  rpc ListClients(ListClientsRequest) returns (ListClientsResponse);
  
  // ========== 授权码流程 ==========
  
  // 授权请求（返回授权码）
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
  
  // Token 请求（授权码换 Token）
  rpc Token(TokenRequest) returns (TokenResponse);
  
  // 刷新 Token
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse);
  
  // 撤销 Token
  rpc RevokeToken(RevokeTokenRequest) returns (google.protobuf.Empty);
  
  // 验证 Token
  rpc IntrospectToken(IntrospectTokenRequest) returns (IntrospectTokenResponse);
}

// ========== OAuth Client 管理消息 ==========

message CreateClientRequest {
  string name = 1;                    // Client 名称
  repeated string redirect_uris = 2;  // 重定向 URI 列表
  repeated string grant_types = 3;    // 授权类型
  repeated string scopes = 4;         // 权限范围
  string client_secret = 5;           // Client Secret（可选）
  bool public_client = 6;             // 是否公开客户端
}

message CreateClientResponse {
  string client_id = 1;               // Client ID
  string client_secret = 2;           // Client Secret
  OAuthClient client = 3;             // Client 详情
}

message GetClientRequest {
  string client_id = 1;               // Client ID
}

message GetClientResponse {
  OAuthClient client = 1;             // Client 详情
}

message UpdateClientRequest {
  string client_id = 1;               // Client ID
  string name = 2;                    // Client 名称
  repeated string redirect_uris = 3;  // 重定向 URI 列表
  repeated string grant_types = 4;    // 授权类型
  repeated string scopes = 5;         // 权限范围
}

message UpdateClientResponse {
  OAuthClient client = 1;             // 更新后的 Client
}

message DeleteClientRequest {
  string client_id = 1;               // Client ID
}

message ListClientsRequest {
  int32 page = 1;                     // 页码
  int32 page_size = 2;                // 每页大小
}

message ListClientsResponse {
  repeated OAuthClient clients = 1;   // Client 列表
  int64 total = 2;                    // 总数
}

// ========== 授权流程消息 ==========

message AuthorizeRequest {
  string client_id = 1;               // Client ID
  string redirect_uri = 2;            // 重定向 URI
  string response_type = 3;           // 响应类型（code）
  string scope = 4;                   // 权限范围
  string state = 5;                   // 状态参数
  string code_challenge = 6;          // PKCE code challenge
  string code_challenge_method = 7;   // PKCE 方法（S256/plain）
  string user_id = 8;                 // 用户 ID（已认证）
}

message AuthorizeResponse {
  string code = 1;                    // 授权码
  string state = 2;                   // 状态参数
}

message TokenRequest {
  string grant_type = 1;              // 授权类型
  string code = 2;                    // 授权码（authorization_code）
  string redirect_uri = 3;            // 重定向 URI
  string client_id = 4;               // Client ID
  string client_secret = 5;           // Client Secret
  string code_verifier = 6;           // PKCE code verifier
  string refresh_token = 7;           // Refresh Token（refresh_token）
  string scope = 8;                   // 权限范围
}

message TokenResponse {
  string access_token = 1;            // Access Token
  string token_type = 2;              // Token 类型（Bearer）
  int64 expires_in = 3;               // 过期时间（秒）
  string refresh_token = 4;           // Refresh Token
  string scope = 5;                   // 权限范围
}

message RefreshTokenRequest {
  string refresh_token = 1;           // Refresh Token
  string client_id = 2;               // Client ID
  string client_secret = 3;           // Client Secret
  string scope = 4;                   // 权限范围
}

message RevokeTokenRequest {
  string token = 1;                   // Token
  string token_type_hint = 2;         // Token 类型提示
  string client_id = 3;               // Client ID
  string client_secret = 4;           // Client Secret
}

message IntrospectTokenRequest {
  string token = 1;                   // Token
  string token_type_hint = 2;         // Token 类型提示
}

message IntrospectTokenResponse {
  bool active = 1;                    // 是否有效
  string scope = 2;                   // 权限范围
  string client_id = 3;               // Client ID
  string username = 4;                // 用户名
  string token_type = 5;              // Token 类型
  int64 exp = 6;                      // 过期时间
  int64 iat = 7;                      // 签发时间
  string sub = 8;                     // 主体（用户 ID）
}

// ========== 实体定义 ==========

message OAuthClient {
  string id = 1;                      // Client ID
  string name = 2;                    // Client 名称
  repeated string redirect_uris = 3;  // 重定向 URI 列表
  repeated string grant_types = 4;    // 授权类型
  repeated string scopes = 5;         // 权限范围
  bool public_client = 6;             // 是否公开客户端
  string tenant_id = 7;               // 租户 ID
  google.protobuf.Timestamp created_at = 8;  // 创建时间
}
